# dotfiles

./: .gitignore  shortcuts.txt
hyper/: .hyper.js
neofetch/: config
reverse-ssh-manager/.config/rssh/: config.yaml
scripts/: README.md  Untitled.ipynb  common.sh  convert_obsidian_images.py  create-branch-from-latest-issue  create-branch-from-latest-issue.sh  detect-electron-apps-with-macos-lag.sh  docker-copyout  git-common.sh  git-switch-trunk-pull  gitcopy.bash  github-pr-branch-clean  github-pr-branch-clean.sh  github-rebase-fork  oldest_line.sh  oldest_line_py.py
scripts/powershell/: save_office_setup.ps1  save_tv_setup.ps1  use_office_setup.ps1  use_tv_setup.ps1
scripts/python/: .gitignore  create-branch-from-latest-issue.py  create-mermaid-from-c-files.py  git-branch-cleanup.py  github-schema.graphql  graphql.config.yml  move_window.py  pyproject.toml
tmux/: .tmux.conf
vscode/: settings.json  styles.css
wallpapers/: 200%
zsh/: .p10k.zsh  .zsh-update  .zshrc  .zshrc.pre-oh-my-zsh  globals.sh  macconf.sh  powerline9kconf.sh  scripts.sh
zsh/oh-my-posh/: config.json  config.json.bak
